@@ -38,11 +38,15 @@ public:
   virtual ~Node();
   virtual KJSO *evaluate() = 0;
 
+  static void deleteAllNodes();
 private:
   // disallow assignment and copy-construction
   Node(const Node &);
   Node& operator=(const Node&);
   int line;
+static  int nodeCount;
+  Node *nextNode;
+  static Node *firstNode;
 };
 
 class StatementNode : public Node {
@@ -67,7 +71,6 @@ class NumberNode : public Node {
 public:
   NumberNode(int v) : value((double)v) { }
   NumberNode(double v) : value(v) { }
-  ~NumberNode() { }
   KJSO *evaluate();
 private:
   double value;
@@ -89,7 +92,6 @@ public:
 class ResolveNode : public Node {
 public:
   ResolveNode(const CString &s) : ident(s) { }
-  ~ResolveNode() { }
   KJSO *evaluate();
 private:
   CString ident;
@@ -98,7 +100,6 @@ private:
 class GroupNode : public Node {
 public:
   GroupNode(Node *g) : group(g) { }
-  ~GroupNode() { delete group; }
   KJSO *evaluate();
 private:
   Node *group;
@@ -107,7 +108,6 @@ private:
 class AccessorNode1 : public Node {
 public:
   AccessorNode1(Node *e1, Node *e2) : expr1(e1), expr2(e2) {}
-  ~AccessorNode1() { delete expr1; delete expr2; }
   KJSO *evaluate();
 private:
   Node *expr1;
@@ -117,7 +117,6 @@ private:
 class AccessorNode2 : public Node {
 public:
   AccessorNode2(Node *e, const CString &s) : expr(e), ident(s) { }
-  ~AccessorNode2() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -128,7 +127,6 @@ class ArgumentListNode : public Node {
 public:
   ArgumentListNode(Node *e) : list(0L), expr(e) {}
   ArgumentListNode(ArgumentListNode *l, Node *e) :  list(l), expr(e) {}
-  ~ArgumentListNode() { delete expr; delete list; }
   KJSO *evaluate();
 private:
   ArgumentListNode *list;
@@ -138,7 +136,6 @@ private:
 class ArgumentsNode : public Node {
 public:
   ArgumentsNode(ArgumentListNode *l) : list(l) {}
-  ~ArgumentsNode() { delete list; }
   KJSO *evaluate();
 private:
   ArgumentListNode *list;
@@ -148,7 +145,6 @@ class NewExprNode : public Node {
 public:
   NewExprNode(Node *e) : expr(e), args(0L) {}
   NewExprNode(Node *e, ArgumentsNode *a) : expr(e), args(a) {}
-  ~NewExprNode() { delete expr; delete args; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -158,7 +154,6 @@ private:
 class FunctionCallNode : public Node {
 public:
   FunctionCallNode(Node *e, ArgumentsNode *a) : expr(e), args(a) {}
-  ~FunctionCallNode() { delete expr; delete args; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -168,7 +163,6 @@ private:
 class PostfixNode : public Node {
 public:
   PostfixNode(Node *e, Operator o) : expr(e), oper(o) {}
-  ~PostfixNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -178,7 +172,6 @@ private:
 class DeleteNode : public Node {
 public:
   DeleteNode(Node *e) : expr(e) {}
-  ~DeleteNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -187,7 +180,6 @@ private:
 class VoidNode : public Node {
 public:
   VoidNode(Node *e) : expr(e) {}
-  ~VoidNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -196,7 +188,6 @@ private:
 class TypeOfNode : public Node {
 public:
   TypeOfNode(Node *e) : expr(e) {}
-  ~TypeOfNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -205,7 +196,6 @@ private:
 class PrefixNode : public Node {
 public:
   PrefixNode(Operator o, Node *e) : oper(o), expr(e) {}
-  ~PrefixNode() { delete expr; }
   KJSO *evaluate();
 private:
   Operator oper;
@@ -215,7 +205,6 @@ private:
 class UnaryPlusNode : public Node {
 public:
   UnaryPlusNode(Node *e) : expr(e) {}
-  ~UnaryPlusNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -224,7 +213,6 @@ private:
 class NegateNode : public Node {
 public:
   NegateNode(Node *e) : expr(e) {}
-  ~NegateNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -233,7 +221,6 @@ private:
 class BitwiseNotNode : public Node {
 public:
   BitwiseNotNode(Node *e) : expr(e) {}
-  ~BitwiseNotNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -242,7 +229,6 @@ private:
 class LogicalNotNode : public Node {
 public:
   LogicalNotNode(Node *e) : expr(e) {}
-  ~LogicalNotNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -251,7 +237,6 @@ private:
 class MultNode : public Node {
 public:
   MultNode(Node *t1, Node *t2, int op) : term1(t1), term2(t2), oper(op) {}
-  ~MultNode() { delete term1; delete term2; }
   KJSO *evaluate();
 private:
   Node *term1, *term2;
@@ -261,7 +246,6 @@ private:
 class AddNode : public Node {
 public:
   AddNode(Node *t1, Node *t2, int op) : term1(t1), term2(t2), oper(op) {}
-  ~AddNode() { delete term1; delete term2; }
   KJSO *evaluate();
 private:
   Node *term1, *term2;
@@ -271,7 +255,6 @@ private:
 class ShiftNode : public Node {
 public:
   ShiftNode(Node *t1, Operator o, Node *t2) : term1(t1), term2(t2), oper(o) {}
-  ~ShiftNode() { delete term1; delete term2; }
   KJSO *evaluate();
 private:
   Node *term1, *term2;
@@ -282,7 +265,6 @@ class RelationalNode : public Node {
 public:
   RelationalNode(Node *e1, Operator o, Node *e2) :
     expr1(e1), expr2(e2), oper(o) {}
-  ~RelationalNode() { delete expr1; delete expr2; }
   KJSO *evaluate();
 private:
   Node *expr1, *expr2;
@@ -292,7 +274,6 @@ private:
 class EqualNode : public Node {
 public:
   EqualNode(Node *e1, Operator o, Node *e2) : expr1(e1), expr2(e2), oper(o) {}
-  ~EqualNode() { delete expr1; delete expr2; }
   KJSO *evaluate();
 private:
   Node *expr1, *expr2;
@@ -303,7 +284,6 @@ class BitOperNode : public Node {
 public:
   BitOperNode(Node *e1, Operator o, Node *e2) :
     expr1(e1), expr2(e2), oper(o) {}
-  ~BitOperNode() { delete expr1; delete expr2; }
   KJSO *evaluate();
 private:
   Node *expr1, *expr2;
@@ -314,7 +294,6 @@ class BinaryLogicalNode : public Node {
 public:
   BinaryLogicalNode(Node *e1, Operator o, Node *e2) :
     expr1(e1), expr2(e2), oper(o) {}
-  ~BinaryLogicalNode() { delete expr1; delete expr2; }
   KJSO *evaluate();
 private:
   Node *expr1, *expr2;
@@ -325,7 +304,6 @@ class ConditionalNode : public Node {
 public:
   ConditionalNode(Node *l, Node *e1, Node *e2) :
     logical(l), expr1(e1), expr2(e2) {}
-  ~ConditionalNode() { delete logical; delete expr1; delete expr2; }
   KJSO *evaluate();
 private:
   Node *logical, *expr1, *expr2;
@@ -334,7 +312,6 @@ private:
 class AssignNode : public Node {
 public:
   AssignNode(Node *l, Operator o, Node *e) : left(l), oper(o), expr(e) {}
-  ~AssignNode() { delete left; delete expr; }
   KJSO *evaluate();
 private:
   Node *left;
@@ -345,7 +322,6 @@ private:
 class CommaNode : public Node {
 public:
   CommaNode(Node *e1, Node *e2) : expr1(e1), expr2(e2) {}
-  ~CommaNode() { delete expr1; delete expr2; }
   KJSO *evaluate();
 private:
   Node *expr1, *expr2;
@@ -355,7 +331,6 @@ class StatListNode : public Node {
 public:
   StatListNode(StatementNode *s) : statement(s), list(0L) { }
   StatListNode(StatListNode *l, StatementNode *s) : statement(s), list(l) { }
-  ~StatListNode() { delete statement; delete list; }
   KJSO *evaluate();
 private:
   StatementNode *statement;
@@ -365,7 +340,6 @@ private:
 class AssignExprNode : public Node {
 public:
   AssignExprNode(Node *e) : expr(e) {}
-  ~AssignExprNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -375,7 +349,6 @@ class VarDeclNode : public Node {
 public:
   VarDeclNode(const CString &id) : ident(id), init(0L) { }
   VarDeclNode(const CString &id, AssignExprNode *in) : ident(id), init(in) { }
-  ~VarDeclNode() { delete init; }
   KJSO *evaluate();
 private:
   CString ident;
@@ -386,7 +359,6 @@ class VarDeclListNode : public Node {
 public:
   VarDeclListNode(VarDeclNode *v) : list(0L), var(v) {}
   VarDeclListNode(Node *l, VarDeclNode *v) : list(l), var(v) {}
-  ~VarDeclListNode() { delete list; delete var; }
   KJSO *evaluate();
 private:
   Node *list;
@@ -396,7 +368,6 @@ private:
 class VarStatementNode : public StatementNode {
 public:
   VarStatementNode(VarDeclListNode *l) : list(l) {}
-  ~VarStatementNode() { delete list; }
   KJSO *evaluate();
 private:
   VarDeclListNode *list;
@@ -405,7 +376,6 @@ private:
 class BlockNode : public StatementNode {
 public:
   BlockNode(StatListNode *s) : statlist(s) {}
-  ~BlockNode() { delete statlist; }
   KJSO *evaluate();
 private:
   StatListNode *statlist;
@@ -414,7 +384,6 @@ private:
 class EmptyStatementNode : public StatementNode {
 public:
   EmptyStatementNode() { } // debug
-  ~EmptyStatementNode() { } // debug
 public:
   KJSO *evaluate();
 };
@@ -422,7 +391,6 @@ public:
 class ExprStatementNode : public StatementNode {
 public:
   ExprStatementNode(Node *e) : expr(e) { }
-  ~ExprStatementNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -432,7 +400,6 @@ class IfNode : public StatementNode {
 public:
   IfNode(Node *e, StatementNode *s1, StatementNode *s2)
     : expr(e), statement1(s1), statement2(s2) {}
-  ~IfNode() { delete expr; delete statement1; delete statement2; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -442,7 +409,6 @@ private:
 class WhileNode : public StatementNode {
 public:
   WhileNode(Node *e, StatementNode *s) : expr(e), statement(s) {}
-  ~WhileNode() { delete expr; delete statement; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -456,7 +422,6 @@ public:
   ForNode(VarDeclListNode *, Node *, Node *, StatementNode *) {}
   ForNode(Node *, Node *, StatementNode *) {}
   ForNode(const CString &, AssignExprNode*, Node *, StatementNode *) {}
-  ~ForNode() { delete expr1; delete expr2; delete expr3; delete stat; }
   KJSO *evaluate();
 private:
   Node *expr1, *expr2, *expr3;
@@ -477,7 +442,6 @@ public:
 class ReturnNode : public StatementNode {
 public:
   ReturnNode(Node *v) : value(v) {}
-  ~ReturnNode() { delete value; }
   KJSO *evaluate();
 private:
   Node *value;
@@ -486,7 +450,6 @@ private:
 class WithNode : public StatementNode {
 public:
   WithNode(const Node *e, const StatementNode *s) : expr(e), stat(s) {}
-  ~WithNode() { delete expr; delete stat; }
   KJSO *evaluate();
 private:
   const Node *expr;
@@ -497,7 +460,6 @@ class ParameterNode : public Node {
 public:
   ParameterNode(const CString &i) : id(i), next(0L) { }
   ParameterNode(ParameterNode *l, const CString &i) : id(i), next(l) { } 
-  ~ParameterNode() { delete next; }
   KJSO *evaluate();
   CString ident() { return id; }
   ParameterNode *nextParam() { return next; }
@@ -510,7 +472,6 @@ class FuncDeclNode : public StatementNode {
 public:
   FuncDeclNode(const CString &i, ParameterNode *p, StatementNode *b)
     : ident(i), param(p), block(b) { }
-  ~FuncDeclNode() { delete param; delete block; }
   KJSO *evaluate() { /* empty */ return 0L; }
   void processFuncDecl();
 private:
@@ -523,7 +484,6 @@ class SourceElementNode : public Node {
 public:
   SourceElementNode(StatementNode *s) { statement = s; function = 0L; }
   SourceElementNode(FuncDeclNode *f) { function = f; statement = 0L;}
-  ~SourceElementNode() { delete statement; delete function; }
   KJSO *evaluate();
   virtual void processFuncDecl();
 private:
@@ -536,7 +496,6 @@ public:
   SourceElementsNode(SourceElementNode *s1) { element = s1; elements = 0L; }
   SourceElementsNode(SourceElementsNode *s1, SourceElementNode *s2)
     { elements = s1; element = s2; }
-  ~SourceElementsNode() { delete element; delete elements; }
   KJSO *evaluate();
   virtual void processFuncDecl();
 private:
@@ -547,7 +506,6 @@ private:
 class ProgramNode : public Node {
 public:
   ProgramNode(SourceElementsNode *s) : source(s) { }
-  ~ProgramNode() { delete source; }
   KJSO *evaluate();
 private:
   SourceElementsNode *source;
@@ -557,7 +515,6 @@ private:
 class PrintNode : public StatementNode {
 public:
   PrintNode(Node *e) : expr(e) { }
-  ~PrintNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
@@ -567,7 +524,6 @@ private:
 class AlertNode : public StatementNode {
 public:
   AlertNode(Node *e) : expr(e) { }
-  ~AlertNode() { delete expr; }
   KJSO *evaluate();
 private:
   Node *expr;
